# kite-motion-planner

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  build_in_docker.sh
docs/: devlog.md  research.md  scene.schema.json  scene_description.md  student_task.odt  sweep_discussion.md
scenes/: pommesgabel.json
src/: collisionobject.h  main.cpp  node.h  playground.cpp  scenegraph.h  subspace.hpp  sweepingshape.h  sweepingtransform.h
src/collision/: collisionchecker.h
src/experiments/: parametrizer.py  playground.cpp
src/interface/: apiscene.h  planningrequest.cpp  planningrequest.h  sceneio.cpp
src/interpolator/: interpolator.cpp  interpolator.h
src/pathfinder/: RRTConnectCustom.cpp  RRTConnectCustom.h  archive  findpath.cpp  findpath.h  planners.hpp
src/pathtools/: simplify.hpp  smoothen.hpp  subdividetransitioncheck.hpp  tighten.hpp  timeparametrize.hpp  verify.hpp
src/utils/: divideandconquershuffle.h  spline.hpp
tools/: validate_json.py
tools/visualization/: ConvexGeometry2.js  debug_visualizer.html  debug_visualizer_talk.html  depthpeel.js  dragdrop.js  scene_visualizer.html  shapes.js  trafo.js  trajectory.js  utils.js  visuals.js
tools/visualization/environment/: convert.sh
